--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@capacitor/core": "^3.2.5",
+    "@ionic/cli": "^6.18.0",
     "@material-ui/core": "4.12.0",
     "@material-ui/icons": "4.11.2",
     "react": "17.0.0",
