--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@capacitor/cli": "^3.2.5",
     "@capacitor/core": "^3.2.5",
     "@ionic/cli": "^6.18.0",
     "@material-ui/core": "4.12.0",
