--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
     "@ionic/cli": "^6.18.0",
     "@material-ui/core": "4.12.0",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "dexie": "3.2.0-rc.2",
+    "dexie-react-hooks": "^1.0.7",
+    "eventemitter3": "^4.0.7",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-indexed-db": "^1.0.12",
+    "react-router": "^6.0.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "2.0.3"
   },
   "devDependencies": {},
